tests/fixtures/invalid/min_float_bytes.py
# Cannot call min() with Float, Bytes
x = min(1.0, b"hello")
